Navbar fixes
- Navbar now collapses when necessary
- Navbar doesn't overlap content anymore

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -158,9 +158,13 @@ dd:hover .priority-select {
     height: auto;
 }
 
-form.navbar-form {
+form.navbar-form button[type=submit] {
     margin-top: 0;
     margin-bottom: 0;
+}
+
+form.navbar-form input[type=search] {
+    max-width: 125px
 }
 
 form .control-group {
